fixed states data, added state map

--- a/JHUprocessing_state_test.ipynb
+++ b/JHUprocessing_state_test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load daily reports "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
        "3433            NaN        0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,22 +238,25 @@
     "daily_reports = glob.glob(path + '\\*.csv') \n",
     "df = pd.DataFrame()\n",
     "for file in daily_reports :\n",
-    "    df_temp = pd.read_csv( file, index_col=None, header=0) \n",
+    "    df_temp = pd.read_csv( file, index_col=None, header=0)\n",
+    "#     print(file) \n",
     "    df = df.append(df_temp, sort=True) \n",
     "\n",
     "df.tail()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# adjust column names and use only relevant columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +366,7 @@
        "3433     1.0        0.0            Zimbabwe  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,8 +380,10 @@
     "df['Datetime']= pd.to_datetime(df['Last Update'] , unit='D'   ) \n",
     "df['Date'] = df['Datetime'].dt.date\n",
     "\n",
+    "\n",
     "cond = df['Country_Region'].isnull()\n",
     "df['Country/Region'] = df['Country/Region'].where(cond, df['Country_Region'] ) \n",
+    "\n",
     "\n",
     "cond = df['Province_State'].isnull()\n",
     "df['Province/State'] = df['Province/State'].where(cond, df['Province_State'] ) \n",
@@ -388,15 +395,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# process columns "
+    "# process columns \n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -489,7 +499,7 @@
        "4        Arkansas  2020-03-29     0.0      426.0     6.0        0.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,26 +519,75 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# transform state geometry "
+    "# transform state geom? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to move and scale a state\n",
+    "def transform_state( geom, data_frame, trans_x, trans_y, scaling_factor, face_color):\n",
+    "        dataFrame_out = data_frame.copy() \n",
+    "        geoTrans = shp.translate( geom, trans_x, trans_y)  \n",
+    "        centroid = geoTrans.centroid.coords[0]\n",
+    "        geoTransScale = shp.scale( geoTrans, xfact=scaling_factor, yfact=scaling_factor, origin=centroid)\n",
+    "        ax.add_geometries( geoTransScale, ccrs.PlateCarree(), facecolor=face_color, edgecolor='k')   \n",
+    "        \n",
+    "        dataFrame_out.loc[:,'lon'] = ((data_frame.loc[:,'lon']  - trans_x + centroid[0] )*\n",
+    "                                        scaling_factor  - centroid[0]  )\n",
+    "        dataFrame_out.loc[:,'lat'] = ((data_frame.loc[:,'lat']  + trans_y - centroid[1] )*\n",
+    "                                        scaling_factor  + centroid[1]  ) \n",
+    "        return dataFrame_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'US' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-ae43b2c2c989>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mUS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'US' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:19: SettingWithCopyWarning: \n",
+      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:27: SettingWithCopyWarning: \n",
+      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
@@ -549,8 +608,9 @@
    ],
    "source": [
     "import geopandas as gpd\n",
-    "\n",
+    "     \n",
     "    \n",
+    "     \n",
     "US = gpd.read_file( 'geo_data\\states.shp')\n",
     "AKratio = 0.4;  # scales Alaska \n",
     "HIratio = 0.7 # scales Hawai \n",
@@ -583,19 +643,31 @@
     "df_US = df_US.rename(columns={'Province/State':'STATE_NAME'}) \n",
     "US= pd.merge(US, df_US, how='left', on=['STATE_NAME'])\n",
     " \n",
-    "US['Cases'] = np.log( US ['Confirmed']+1) "
+    "US['Cases'] = np.log( US ['Confirmed']+1) \n",
+    "# US.head()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# plot US map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -613,6 +685,10 @@
    ],
    "source": [
     "fig, ax = plt.subplots(1,1 ,figsize=(15,8))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "wp = US.plot(column='Cases', ax=ax, cmap='OrRd'   );\n",
     " \n",
     "vmin = 1\n",
@@ -623,6 +699,8 @@
     "# fake up the array of the scalar mappable. Urgh...\n",
     "sm._A = []\n",
     "fig.colorbar(sm, cax=cax)\n",
+    "\n",
+    " \n",
     "\n",
     "wp.set_xbound(-135,-66)\n",
     "wp.set_ybound(23,49.5)  \n",
@@ -636,6 +714,31 @@
     "            transparent=  True,             \n",
     "            bbox_inches = 'tight', pad_inches = 0,\n",
     "            )   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
    ]
   }
  ],
