generate plots with JHUprocessing

--- a/JHUdata_states_log.ipynb
+++ b/JHUdata_states_log.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:362: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "D:\\D_program_files\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -198,7 +216,7 @@
        "1787  Wyoming  2020-04-09     0.0      230.0     0.0        0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +443,7 @@
        "1787     -1.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,81 +493,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Alabama',\n",
+       " 'Alaska',\n",
+       " 'Arizona',\n",
+       " 'Arkansas',\n",
+       " 'California',\n",
+       " 'Colorado',\n",
+       " 'Connecticut',\n",
+       " 'Delaware',\n",
+       " 'District of Columbia',\n",
+       " 'Florida',\n",
+       " 'Georgia',\n",
+       " 'Hawaii',\n",
+       " 'Idaho',\n",
+       " 'Illinois',\n",
+       " 'Indiana',\n",
+       " 'Iowa',\n",
+       " 'Kansas',\n",
+       " 'Kentucky',\n",
+       " 'Louisiana',\n",
+       " 'Maine',\n",
+       " 'Maryland',\n",
+       " 'Massachusetts',\n",
+       " 'Michigan',\n",
+       " 'Minnesota',\n",
+       " 'Mississippi',\n",
+       " 'Missouri',\n",
+       " 'Montana',\n",
+       " 'Nebraska',\n",
+       " 'Nevada',\n",
+       " 'New Hampshire',\n",
+       " 'New Jersey',\n",
+       " 'New Mexico',\n",
+       " 'New York',\n",
+       " 'North Carolina',\n",
+       " 'North Dakota',\n",
+       " 'Ohio',\n",
+       " 'Oklahoma',\n",
+       " 'Oregon',\n",
+       " 'Pennsylvania',\n",
+       " 'Rhode Island',\n",
+       " 'South Carolina',\n",
+       " 'South Dakota',\n",
+       " 'Tennessee',\n",
+       " 'Texas',\n",
+       " 'Utah',\n",
+       " 'Vermont',\n",
+       " 'Virginia',\n",
+       " 'Washington',\n",
+       " 'West Virginia',\n",
+       " 'Wisconsin',\n",
+       " 'Wyoming']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# # find doubling rate, average over last 3 days?  \n",
-    "# average_period = 3\n",
     "\n",
-    "# last_day = df_state['Date'].max() #- timedelta(days=3)\n",
-    "# prior_day = df_state['Date'].max() - timedelta(days=average_period)\n",
-    "\n",
-    "# bool_last = df_state['Date'] == last_day\n",
-    "# bool_prior = df_state['Date'] == prior_day\n",
-    "  \n",
-    "# for state in states: \n",
-    "#     bool_state = df_state['State'] == state   \n",
-    "    \n",
-    "#     ratio = df_state.loc[bool_last & bool_state,'Confirmed'].values[0]  / \\\n",
-    "#             df_state.loc[bool_prior & bool_state,'Confirmed'].values[0]   \n",
-    "    \n",
-    "#     daily_ratio = ratio**(1/average_period)  \n",
-    "    \n",
-    "#     df_state.loc[bool_state,'ratio'] = daily_ratio\n",
-    "\n",
-    "    \n",
-    "# bin_array = np.array( [0, 2.**(1./8), 2.**(1./7), 2.**(1./6), 2.**(1./5), 2.**(1./4) ,np.inf ]) \n",
-    "# bin_tick_labels = ['8','7','6','5','4']\n",
-    "\n",
-    "# df_state['doubling'] = pd.cut( df_state['ratio'],   bin_array ,labels=range(len(bin_array)-1) , include_lowest=True )\n",
-    "    \n",
-    "# df_state['doubling'].unique()\n",
-    "\n",
-    "# df_state.head()"
+    "try_bool = df_state.groupby('State').max()['Delta C'] > 0 \n",
+    "threshold_states = try_bool.index[try_bool].tolist()\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # find doubling rate, average over last 3 days?  \n",
-    "# average_period = 3\n",
-    "\n",
-    "# last_day = df_state['Date'].max() #- timedelta(days=3)\n",
-    "# prior_day = df_state['Date'].max() - timedelta(days=average_period)\n",
-    "\n",
-    "# bool_last = df_state['Date'] == last_day\n",
-    "# bool_prior = df_state['Date'] == prior_day\n",
-    "  \n",
-    "# for state in states: \n",
-    "#     bool_state = df_state['State'] == state   \n",
-    "    \n",
-    "#     ratio = df_state.loc[bool_last & bool_state,'Deaths'].values[0]  / \\\n",
-    "#             df_state.loc[bool_prior & bool_state,'Deaths'].values[0]   \n",
-    "    \n",
-    "#     daily_ratio = ratio**(1/average_period)   \n",
-    "#     if np.isnan(ratio):\n",
-    "#         ratio = 1\n",
-    "        \n",
-    "#     if np.isinf(ratio):\n",
-    "#         ratio = 100\n",
-    "     \n",
-    "#     df_state.loc[bool_state,'ratioD'] = daily_ratio\n",
-    "\n",
-    "#     bin_array = np.array( [-1, 2.**(1./20), 2.**(1./15), 2.**(1./10), 2.**(1./7), 2.**(1./5)  ,np.inf ]) \n",
-    "# df_state['doublingD'] = pd.cut( df_state['ratioD'],   bin_array ,labels=range(len(bin_array)-1) , include_lowest=True )\n",
-    "\n",
-    "# df_state['doublingD'] = df_state['doublingD'].fillna(0)\n",
-    "\n",
-    "# df_state['doublingD'].unique() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -604,6 +628,7 @@
     "    y = df_pl['Confirmed'].iloc[-1]*0.98\n",
     "    x = df_pl['Delta C'].iloc[-1] + 0.5      \n",
     "       \n",
+    "    print( )\n",
     "    if (state in notable_states) & (0 <=  x <= xCmax+10) & (10<= y <= yCmax*2): \n",
     "        t = ax.text(x,y,state, ha=\"left\", va=\"center\" ,  bbox=bbox_props)\n",
     "         \n",
@@ -652,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +783,7 @@
        "['New York', 'New Jersey', 'Michigan', 'California', 'Massachusetts']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1021,9 +1046,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7067.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_state['Deaths'].max()"
    ]
