change to dirname

--- a/notebooks/JHUdata_country_map.ipynb
+++ b/notebooks/JHUdata_country_map.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "import os\n",
     "import sys\n",
-    "base_path = os.path.abspath(os.path.join( os.getcwd()   , os.pardir ) ) \n",
+    "base_path = os.path.dirname( os.getcwd()  )   \n",
     "sys.path.append(base_path ) \n",
     "import JHU_dataprocessing_functions as dp\n",
     "import JHU_plotting_functions as jp"
